tests/ui/de-field-attr-from-and-try-from.stderr
error: The `try_from` and `from` attributes can't be used together.
 --> tests/ui/de-field-attr-from-and-try-from.rs:5:14
  |
5 |     #[deserr(from(String) = usize::FromStr)]
  |              ^^^^
